# sharegpt

./: .gitignore  ai-plugin.json  main.py  pyproject.toml  requirements.txt  vercel.json
.well-known/: ai-plugin.json
scripts/: export-requirements.sh
